--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     width: 495px;
     height: 495px;
     border-style: solid;
-    border-color: red;
-    border-width: 1px;
+    border-color: black;
+    border-width: 2px;
     background-color: white;
     flex-wrap: wrap;
     gap: 1px;
@@ -15,6 +15,12 @@
     display: flex;
     width: 30px;
     height: 30px;
-    background-color: lightgray;
+    background-color: white;
+}
 
+.drawBlockFilled {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    background-color: lightblue;
 }
