--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 #container {
     display: flex;
+    flex-direction: column;
+    width: 800px;
+    height: 800px;
+    gap: 5px;
+}
+
+#reset {
+    align-self: flex-start;
+}
+
+#drawPad {
+    display: flex;
     justify-content: flex-start;
-    width: 495px;
-    height: 495px;
+    width: 500px;
+    height: 500px;
     border-style: solid;
     border-color: black;
     border-width: 2px;
